--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,8 @@ chardet==4.0.0
 Django==3.2.1
 gunicorn==20.1.0
 idna==2.10
-
+pkg-resources==0.0.0
+psycopg2==2.8.6
 pytz==2021.1
 requests==2.25.1
 sqlparse==0.4.1
