--- a/requirements.txt
+++ b/requirements.txt
@@ -4,10 +4,10 @@ chardet==4.0.0
 Django==3.2.1
 gunicorn==20.1.0
 idna==2.10
-
 psycopg2==2.8.6
 pytz==2021.1
 requests==2.25.1
 sqlparse==0.4.1
 typing-extensions==3.10.0.0
 urllib3==1.26.4
+whitenoise==5.2.0
